--- a/codes/1.0_eda.ipynb
+++ b/codes/1.0_eda.ipynb
@@ -1497,7 +1497,7 @@
         "  brand_lexdict[complete_name] = lexics\n",
         "  brand_invlexdict[complete_name] = complete_name\n",
         "  for lex in lexics:\n",
-        "    if len(lex) == 0:\n",
+        "    if len(lex.replace(' ', '')) == 0:\n",
         "      continue\n",
         "    if lex not in brand_invlexdict:\n",
         "      brand_invlexdict[lex] = complete_name\n",
@@ -1520,9 +1520,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PK60ME7KppL9",
-        "outputId": "11efabd5-763f-469e-d22f-e368498603c4"
+        "outputId": "8a23ffa0-ab5e-4601-936d-0302fff1bbae"
       },
-      "execution_count": 62,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -1548,8 +1548,17 @@
       "metadata": {
         "id": "jl6ny_FyDPva"
       },
-      "execution_count": 53,
+      "execution_count": 71,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## quantiles/percentiles"
+      ],
+      "metadata": {
+        "id": "qmKv5k2gxk7D"
+      }
     },
     {
       "cell_type": "code",
@@ -1566,9 +1575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6KgzMeg2CKJ8",
-        "outputId": "2aa85fbe-4dc6-4081-ad25-27141f06be16"
+        "outputId": "380244fe-2bbc-463d-a083-dbf4867c5429"
       },
-      "execution_count": 6,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -1621,9 +1630,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGl_oibM5dS5",
-        "outputId": "b662d2bc-41bf-47a7-825e-451f40ddb4d7"
+        "outputId": "dde5b1f5-2051-48dd-93d6-b19e4abd47f6"
       },
-      "execution_count": 64,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -1644,52 +1653,72 @@
       "metadata": {
         "id": "ccqkSE7_NyYJ"
       },
-      "execution_count": 65,
+      "execution_count": 75,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "branddf.head()"
+        "branddf"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 406
+          "height": 70
         },
         "id": "mt7EtwfWP9dk",
-        "outputId": "bbc6fe8d-a1f4-4899-81f2-8e59da50415d"
+        "outputId": "358ef156-d79e-4a6b-bb85-570728b41faa"
       },
-      "execution_count": 67,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                      name occurred_at  iv_price        brand  units  \\\n",
-              "0            元山熱水瓶YS-540AP  2021-02-07      1650           元山    1.0   \n",
-              "1      356612@姍拉娜治痘洗面乳150G  2021-02-02      1053          姍拉娜    1.0   \n",
-              "2          台鹽海洋鹼性離子水 600ML  2021-02-04       609           台鹽    1.0   \n",
-              "3             妮傲絲翠果酸深層保養乳液  2021-02-14      1142  NEO-TEC妮傲絲翠    1.0   \n",
-              "4  舒潔棉柔舒適迪士尼抽取式衛生紙 100抽16入  2021-02-01       198           舒潔    1.0   \n",
+              "                                    name occurred_at  iv_price          brand  \\\n",
+              "0                          元山熱水瓶YS-540AP  2021-02-07      1650             元山   \n",
+              "1                    356612@姍拉娜治痘洗面乳150G  2021-02-02      1053            姍拉娜   \n",
+              "2                        台鹽海洋鹼性離子水 600ML  2021-02-04       609             台鹽   \n",
+              "3                           妮傲絲翠果酸深層保養乳液  2021-02-14      1142    NEO-TEC妮傲絲翠   \n",
+              "4                舒潔棉柔舒適迪士尼抽取式衛生紙 100抽16入  2021-02-01       198             舒潔   \n",
+              "...                                  ...         ...       ...            ...   \n",
+              "70041  惠而浦16公斤瓦斯型滾筒蒸氣(可堆疊)乾衣機8TWGD6622HW  2021-02-07     35291  惠而浦 Whirlpool   \n",
+              "70042                          康乃馨成人紙尿褲L  2021-02-04      1041            康乃馨   \n",
+              "70043               日本芮芙茹零矽靈洗髮露460ml頭皮保養  2021-02-04       299     芮芙茹 Reveur   \n",
+              "70044                Crest長效鎖白牙膏-輕柔鑽白99g  2021-02-13       401          crest   \n",
+              "70045             714171@雀巢咖啡三合一義式拿鐵16G*  2021-02-04       281             雀巢   \n",
               "\n",
-              "   unit_price  total_price                           channel  \\\n",
-              "0      1490.0       1188.0  738fbc9320a9106d8905bef71a02bb99   \n",
-              "1        85.0         85.0  d10c78673e1d88714ba645fadc3de0d1   \n",
-              "2        19.0         19.0  d7769307282f69448322f9306bdf9700   \n",
-              "3      1200.0       1200.0  7a0a2154662bc9038594f04c886c87d8   \n",
-              "4       198.0        198.0  ab7febfe145bba3da1c0fb19507f1703   \n",
+              "       units  unit_price  total_price                           channel  \\\n",
+              "0        1.0      1490.0       1188.0  738fbc9320a9106d8905bef71a02bb99   \n",
+              "1        1.0        85.0         85.0  d10c78673e1d88714ba645fadc3de0d1   \n",
+              "2        1.0        19.0         19.0  d7769307282f69448322f9306bdf9700   \n",
+              "3        1.0      1200.0       1200.0  7a0a2154662bc9038594f04c886c87d8   \n",
+              "4        1.0       198.0        198.0  ab7febfe145bba3da1c0fb19507f1703   \n",
+              "...      ...         ...          ...                               ...   \n",
+              "70041    1.0     35291.0      35291.0  4a3d67cc0cd76bf56f18b40ed671bb05   \n",
+              "70042    1.0       194.0        194.0  9742158c78b35d77c6351ecbfb60897b   \n",
+              "70043    1.0       299.0        299.0  0f20279a949fd072f0e3858f97d0654a   \n",
+              "70044    1.0        99.0         99.0  6757b9193b3446acb4b97a05649b3c7e   \n",
+              "70045    1.0        99.0         99.0  dcfa99187fa812c6cd35f835f9d1e5f1   \n",
               "\n",
-              "               clean_name heuristic_brand  \n",
-              "0            元山熱水瓶YS540AP              元山  \n",
-              "1      356612姍拉娜治痘洗面乳150G             姍拉娜  \n",
-              "2          台鹽海洋鹼性離子水600ML              台鹽  \n",
-              "3            妮傲絲翠果酸深層保養乳液    NEO-TEC 妮傲絲翠  \n",
-              "4  舒潔棉柔舒適迪士尼抽取式衛生紙100抽16入              舒潔  "
+              "                            clean_name heuristic_brand  \n",
+              "0                         元山熱水瓶YS540AP              元山  \n",
+              "1                   356612姍拉娜治痘洗面乳150G             姍拉娜  \n",
+              "2                       台鹽海洋鹼性離子水600ML              台鹽  \n",
+              "3                         妮傲絲翠果酸深層保養乳液    NEO-TEC 妮傲絲翠  \n",
+              "4               舒潔棉柔舒適迪士尼抽取式衛生紙100抽16入              舒潔  \n",
+              "...                                ...             ...  \n",
+              "70041  惠而浦16公斤瓦斯型滾筒蒸氣可堆疊乾衣機8TWGD6622HW   惠而浦 whirlpool  \n",
+              "70042                        康乃馨成人紙尿褲L             康乃馨  \n",
+              "70043             日本芮芙茹零矽靈洗髮露460ml頭皮保養      芮芙茹 Reveur  \n",
+              "70044               Crest長效鎖白牙膏輕柔鑽白99g         Peach C  \n",
+              "70045             714171雀巢咖啡三合一義式拿鐵16G       雀巢 Nestle  \n",
+              "\n",
+              "[70046 rows x 10 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6cab8460-c881-400c-9280-547553dc9154\">\n",
+              "  <div id=\"df-8fd3b6cd-cd80-459f-9fe6-1b6e8b9fd429\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1787,10 +1816,89 @@
               "      <td>舒潔棉柔舒適迪士尼抽取式衛生紙100抽16入</td>\n",
               "      <td>舒潔</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70041</th>\n",
+              "      <td>惠而浦16公斤瓦斯型滾筒蒸氣(可堆疊)乾衣機8TWGD6622HW</td>\n",
+              "      <td>2021-02-07</td>\n",
+              "      <td>35291</td>\n",
+              "      <td>惠而浦 Whirlpool</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>35291.0</td>\n",
+              "      <td>35291.0</td>\n",
+              "      <td>4a3d67cc0cd76bf56f18b40ed671bb05</td>\n",
+              "      <td>惠而浦16公斤瓦斯型滾筒蒸氣可堆疊乾衣機8TWGD6622HW</td>\n",
+              "      <td>惠而浦 whirlpool</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70042</th>\n",
+              "      <td>康乃馨成人紙尿褲L</td>\n",
+              "      <td>2021-02-04</td>\n",
+              "      <td>1041</td>\n",
+              "      <td>康乃馨</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>194.0</td>\n",
+              "      <td>194.0</td>\n",
+              "      <td>9742158c78b35d77c6351ecbfb60897b</td>\n",
+              "      <td>康乃馨成人紙尿褲L</td>\n",
+              "      <td>康乃馨</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70043</th>\n",
+              "      <td>日本芮芙茹零矽靈洗髮露460ml頭皮保養</td>\n",
+              "      <td>2021-02-04</td>\n",
+              "      <td>299</td>\n",
+              "      <td>芮芙茹 Reveur</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>299.0</td>\n",
+              "      <td>299.0</td>\n",
+              "      <td>0f20279a949fd072f0e3858f97d0654a</td>\n",
+              "      <td>日本芮芙茹零矽靈洗髮露460ml頭皮保養</td>\n",
+              "      <td>芮芙茹 Reveur</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70044</th>\n",
+              "      <td>Crest長效鎖白牙膏-輕柔鑽白99g</td>\n",
+              "      <td>2021-02-13</td>\n",
+              "      <td>401</td>\n",
+              "      <td>crest</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>6757b9193b3446acb4b97a05649b3c7e</td>\n",
+              "      <td>Crest長效鎖白牙膏輕柔鑽白99g</td>\n",
+              "      <td>Peach C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70045</th>\n",
+              "      <td>714171@雀巢咖啡三合一義式拿鐵16G*</td>\n",
+              "      <td>2021-02-04</td>\n",
+              "      <td>281</td>\n",
+              "      <td>雀巢</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>dcfa99187fa812c6cd35f835f9d1e5f1</td>\n",
+              "      <td>714171雀巢咖啡三合一義式拿鐵16G</td>\n",
+              "      <td>雀巢 Nestle</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>70046 rows × 10 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6cab8460-c881-400c-9280-547553dc9154')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8fd3b6cd-cd80-459f-9fe6-1b6e8b9fd429')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1841,12 +1949,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6cab8460-c881-400c-9280-547553dc9154 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8fd3b6cd-cd80-459f-9fe6-1b6e8b9fd429 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6cab8460-c881-400c-9280-547553dc9154');\n",
+              "          const element = document.querySelector('#df-8fd3b6cd-cd80-459f-9fe6-1b6e8b9fd429');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1869,7 +1977,15 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 78
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: total number of rows (70046) exceeds max_rows (20000). Limiting to first (20000) rows.\n",
+            "Warning: total number of rows (70046) exceeds max_rows (20000). Limiting to first (20000) rows.\n"
+          ]
         }
       ]
     },
@@ -1881,7 +1997,7 @@
       "metadata": {
         "id": "yPrQITZdoLIG"
       },
-      "execution_count": 48,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -1892,20 +2008,23 @@
         "fp1 = f'{maindir}/data/brand_lexics.json'\n",
         "fp2 = f'{maindir}/data/inverted_brand_lexics.json'\n",
         "with open (fp1, 'w') as f:\n",
-        "  json.dumps(brand_invlexdict, indent = 4, ensure_ascii = False)\n",
+        "  json.dump(brand_invlexdict, f, indent = 4, ensure_ascii = False)\n",
         "with open (fp2, 'w') as f:\n",
-        "  json.dumps(brand_lexdict, indent = 4, ensure_ascii = False)"
+        "  json.dump(brand_lexdict, f, indent = 4, ensure_ascii = False)"
       ],
       "metadata": {
         "id": "14fyw8XrelAB"
       },
-      "execution_count": 66,
+      "execution_count": 87,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Profiler Report"
+        "## Profiler Report\n",
+        "用的是原始資料集，\n",
+        "但因為原始資料集有標記品牌多種表達（multiple lexicalizations）的問題，\n",
+        "數據可能有所失真。"
       ],
       "metadata": {
         "id": "SIHZs954MXzf"
@@ -2121,7 +2240,7 @@
       "metadata": {
         "id": "y98uk1L1_vTR"
       },
-      "execution_count": 68,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -2136,9 +2255,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QcdjxM1uoXCu",
-        "outputId": "a3ceccae-49bb-4771-a163-8fee799bcb7f"
+        "outputId": "abe77471-4fa9-42ed-94be-4d61f7e3f84a"
       },
-      "execution_count": 69,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2148,7 +2267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 83
         }
       ]
     }
