--- a/codes/1.0_eda.ipynb
+++ b/codes/1.0_eda.ipynb
@@ -1410,7 +1410,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P9fIwvpscwDU",
-        "outputId": "b646a7c7-6770-4407-a076-4c19f2c36fa8"
+        "outputId": "cf313e3b-191d-4025-bb94-da044846ed3a"
       },
       "outputs": [
         {
@@ -1437,7 +1437,7 @@
       "metadata": {
         "id": "bZyFr3wgdrLk"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1457,7 +1457,7 @@
       "metadata": {
         "id": "7s5wM-Y_BPYO"
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1470,7 +1470,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5bpCU6qMBnfj",
-        "outputId": "c359cabf-83e5-47f1-ab62-3ef688619071"
+        "outputId": "d5969200-3d9f-49bb-d7aa-3e709b1f4ebf"
       },
       "execution_count": 4,
       "outputs": [
@@ -1506,7 +1506,6 @@
         "    if len(brand_invlexdict[lex]) < len(complete_name):\n",
         "      brand_invlexdict[lex] = complete_name\n",
         "    \n",
-        "    \n",
         "# inverted dictionary \n",
         "print(brand_invlexdict['慧心'])\n",
         "print(brand_invlexdict['慧心貓糧 SmartHeart'])\n",
@@ -1520,9 +1519,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PK60ME7KppL9",
-        "outputId": "8a23ffa0-ab5e-4601-936d-0302fff1bbae"
+        "outputId": "af961d84-8561-4b28-efe4-c18330ff9533"
       },
-      "execution_count": 70,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1548,7 +1547,7 @@
       "metadata": {
         "id": "jl6ny_FyDPva"
       },
-      "execution_count": 71,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1577,7 +1576,7 @@
         "id": "6KgzMeg2CKJ8",
         "outputId": "380244fe-2bbc-463d-a083-dbf4867c5429"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,9 +1629,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGl_oibM5dS5",
-        "outputId": "dde5b1f5-2051-48dd-93d6-b19e4abd47f6"
+        "outputId": "f732eb04-a55c-487b-b389-3d16e17aee27"
       },
-      "execution_count": 73,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1652,7 @@
       "metadata": {
         "id": "ccqkSE7_NyYJ"
       },
-      "execution_count": 75,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1669,7 +1668,7 @@
         "id": "mt7EtwfWP9dk",
         "outputId": "358ef156-d79e-4a6b-bb85-570728b41faa"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1997,7 +1996,7 @@
       "metadata": {
         "id": "yPrQITZdoLIG"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2008,14 +2007,14 @@
         "fp1 = f'{maindir}/data/brand_lexics.json'\n",
         "fp2 = f'{maindir}/data/inverted_brand_lexics.json'\n",
         "with open (fp1, 'w') as f:\n",
-        "  json.dump(brand_invlexdict, f, indent = 4, ensure_ascii = False)\n",
+        "  json.dump(brand_lexdict, f, indent = 4, ensure_ascii = False)\n",
         "with open (fp2, 'w') as f:\n",
-        "  json.dump(brand_lexdict, f, indent = 4, ensure_ascii = False)"
+        "  json.dump(brand_invlexdict, f, indent = 4, ensure_ascii = False)"
       ],
       "metadata": {
         "id": "14fyw8XrelAB"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2234,13 +2233,12 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from scipy.spatial.distance import jaccard\n",
         "from sklearn.metrics import f1_score"
       ],
       "metadata": {
         "id": "y98uk1L1_vTR"
       },
-      "execution_count": 82,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -2248,16 +2246,16 @@
       "source": [
         "y_true = branddf['brand']\n",
         "y_pred = branddf['heuristic_brand']\n",
-        "f1_score(y_true, y_pred, average = 'macro')"
+        "f1_score(y_true, y_pred, average = 'macro') "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QcdjxM1uoXCu",
-        "outputId": "abe77471-4fa9-42ed-94be-4d61f7e3f84a"
+        "outputId": "09aa195f-6fc4-4e24-e227-d0d7bf08192c"
       },
-      "execution_count": 83,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2267,7 +2265,57 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Jaccard"
+      ],
+      "metadata": {
+        "id": "8Xd4OTJO7FIQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip -q install textdistance"
+      ],
+      "metadata": {
+        "id": "JFPQJEyy7yvC"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from textdistance import jaccard\n",
+        "running_score = 0 \n",
+        "for t, p in zip(y_true, y_pred):\n",
+        "  running_score += jaccard(t, p)\n",
+        "running_score/(len(y_true))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ip9bFJ787G9K",
+        "outputId": "705d4dab-1edd-415f-a958-c299c5534d14"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6505755685570801"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
