--- a/codes/category/40.0_add_valid_string.ipynb
+++ b/codes/category/40.0_add_valid_string.ipynb
@@ -7,13 +7,12 @@
    "source": [
     "## 40.0 Post-hoc\n",
     "\n",
-    "Author: Nana\n",
-    "Date: 2022.5.15\n",
-    "1. run inference on valid set, save them \n",
-    "2. identify those categories with low f1 score\n",
-    "3. run fasttest keywords string exact matching\n",
-    "    if exact match exists and the probability of the selected category is below a threshold h,\n",
-    "    then replace the model-prediction with fasttext choice. \n",
+    "    Author: Nana\n",
+    "    Date: 2022.5.15\n",
+    "1. Run inference on valid set, save the softmaxed probability vectors.\n",
+    "2. Identify the categories with low f1 score.\n",
+    "3. Run fasttext keywords string matching; add up the probabilites of the matched keywords\n",
+    "and re-select the classes based on new probability vector.\n",
     "    "
    ]
   },
