--- a/codes/category/40.0_add_valid_string.ipynb
+++ b/codes/category/40.0_add_valid_string.ipynb
@@ -722,7 +722,7 @@
    "id": "5de6f28c-4471-437d-9236-64173602ead1",
    "metadata": {},
    "source": [
-    "## 🏆 probability threshold ＝= 0.5\n",
+    "## 🏆 probability threshold = 0.5\n",
     "當初訓練的門檻也是調0.5，macro f1可至0.71左右"
    ]
   },
@@ -1019,7 +1019,7 @@
    "id": "cb4421b7-d605-433a-99ce-2cddced25265",
    "metadata": {},
    "source": [
-    "## 🏆 probability threshold ＝0.97\n",
+    "## 🏆 probability threshold = 0.97\n",
     "我有試過0.7, 0.8, 0.999, ...目前看起來最佳的threshold如上，macro f1可至0.74左右。\n",
     "\n",
     "簡單來說這個演算法流程就是**訓練多標籤BERT（macro f1=0.639），以其預測結果輔以fasttext所訓練出的top 10關鍵字matching（macro f1 = 0.738）**。\n",
