--- a/codes/category/40.0_add_valid_string.ipynb
+++ b/codes/category/40.0_add_valid_string.ipynb
@@ -1022,7 +1022,7 @@
     "## 🏆 probability threshold = 0.97\n",
     "我有試過0.7, 0.8, 0.999, ...目前看起來最佳的threshold如上，macro f1可至0.74左右。\n",
     "\n",
-    "簡單來說這個演算法流程就是**訓練多標籤BERT（macro f1=0.639），以其預測結果輔以fasttext所訓練出的top 10關鍵字matching（macro f1 = 0.738）**。\n",
+    "簡單來說這個演算法流程就是**訓練多標籤BERT（macro f1=0.639），以其預測結果輔以fasttext所訓練出的top 10關鍵字matching（macro f1 ~= 0.74）**。\n",
     "都是以資料集本身餵入處理與切割train test，未經過class數量的篩選與人為操作，如test set分布和valid set相似，可預估最後表現應該也是落在**0.63 ~0.74**之間。\n",
     "\n",
     "🍀 我這邊應該就做到這一步，接下來我會開始把這些步驟串在一起寫inference script。"
