--- a/codes/category/40.0_add_valid_string.ipynb
+++ b/codes/category/40.0_add_valid_string.ipynb
@@ -19,19 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "b5cbd35e-98bb-4441-892e-4d0397f79859",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/avo727/.local/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import joblib, sys\n",
     "import numpy as np\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "6063f93b-46ba-4f43-ae2d-424733c776b6",
    "metadata": {},
    "outputs": [],
@@ -69,7 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "id": "9310b2cc-9ec8-4881-9da3-599a148d31b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['id', 'name', 'label', 'seg_name', 'label_name', 'input_ids', 'token_type_ids', 'attention_mask'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(valset[0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "b0986707-efc8-4e43-b929-3e3754a5b93a",
    "metadata": {},
    "outputs": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "e790e95c-26c1-4fb7-aece-080164f6a7a1",
    "metadata": {},
    "outputs": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cdee0e5a-631d-4519-aafa-5dbb0e5b7836",
    "metadata": {},
    "outputs": [
@@ -117,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon May 23 10:44:17 2022       \n",
+      "Mon May 23 16:03:46 2022       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 495.46       Driver Version: 495.46       CUDA Version: 11.5     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -126,7 +135,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  NVIDIA RTX A5000    Off  | 00000000:3E:00.0  On |                  Off |\n",
-      "| 30%   39C    P2    62W / 230W |   1955MiB / 24248MiB |     11%      Default |\n",
+      "| 30%   35C    P2    60W / 230W |   1955MiB / 24248MiB |     11%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -136,7 +145,7 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1612      G   /usr/lib/xorg/Xorg                 24MiB |\n",
-      "|    0   N/A  N/A    295801      C   ...nda3/envs/py38/bin/python     1909MiB |\n",
+      "|    0   N/A  N/A    297625      C   ...727/miniconda3/bin/python     1909MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ce4d8af3-f456-4760-859f-ee7170982711",
    "metadata": {},
    "outputs": [],
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "88764eb3-2a3e-4fb6-b5f3-ba0df24e45f0",
    "metadata": {},
    "outputs": [],
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "e08adf5a-c796-4776-980a-299dbd3cad18",
    "metadata": {},
    "outputs": [],
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "0a0f3093-be4a-489f-a036-3b6ea3e20247",
    "metadata": {},
    "outputs": [],
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "a0d91f95-b340-4a90-a11c-4f70399d8fa9",
    "metadata": {},
    "outputs": [],
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "ffb276d5-ec9e-44c2-834b-9f38b6e3efab",
    "metadata": {},
    "outputs": [],
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "f015d0fd-d043-4646-a956-d31c371b1a61",
    "metadata": {},
    "outputs": [],
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "96c0e427-d920-4aee-a024-20f6e38d67b5",
    "metadata": {},
    "outputs": [],
@@ -456,10 +465,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "903219d3-7802-4264-b1bf-09e0caeae574",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gensim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [27]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## load fasttext model \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgensim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FastText\n\u001b[1;32m      3\u001b[0m fmodelpath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./fasttext/fasttext.model\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m fm \u001b[38;5;241m=\u001b[39m FastText\u001b[38;5;241m.\u001b[39mload(fmodelpath)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gensim'"
+     ]
+    }
+   ],
    "source": [
     "## load fasttext model \n",
     "from gensim.models import FastText\n",
@@ -534,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "45a067b6-137d-4709-8e90-739c117b1952",
    "metadata": {},
    "outputs": [
@@ -544,7 +565,7 @@
        "['./category/cat2kw.pkl']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +579,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "id": "6df3f73c-9f82-405f-951d-69c10c726bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('美食犬', 0.922674298286438),\n",
+       " ('乾拌麵', 0.9191282987594604),\n",
+       " ('大乾桶麵', 0.9166817665100098),\n",
+       " ('乾拌', 0.915222704410553),\n",
+       " ('拌拌麵', 0.9149037599563599),\n",
+       " ('快煮麵', 0.9127275943756104),\n",
+       " ('乾拌碗', 0.9123164415359497),\n",
+       " ('蔥香', 0.9121950268745422),\n",
+       " ('撈拌麵', 0.9117663502693176),\n",
+       " ('金博家', 0.9113109111785889),\n",
+       " ('快煮麵', 1),\n",
+       " ('乾拌麵', 1)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat2keywordspath = './category/cat2kw.pkl'\n",
+    "cat2keywords = joblib.load(cat2keywordspath)\n",
+    "cat2keywords['快煮麵/乾拌麵']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "51a11006-95da-41e6-a9dc-e235b5204cb4",
    "metadata": {},
    "outputs": [
@@ -568,7 +623,7 @@
        "\"\\nfor i, sample in enumerate(samples):\\n    hit_vector = np.zeros(N)\\n    name = sample['name']\\n    for cat, pair in cat2kw.items():\\n        ph_list, ph_probs = pair\\n        pat = re.compile(r'(?:{})'.format('|'.join(map(re.escape, ph_list))))\\n        found = re.findall(pat, name)\\n        cat_hit_probs = sum(ph_probs[x] for x in found)\\n        catid = cat2idx[cat]\\n        hit_vector[catid] = cat_hit_probs\\n    samples[i]['hitsprobs'] = hit_vector \\n\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "355f4a58-c21d-4f72-a58b-954952fec759",
    "metadata": {},
    "outputs": [],
@@ -601,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "f8ec8e52-b1aa-4ddc-a6b6-d5b4441cb077",
    "metadata": {},
    "outputs": [],
@@ -611,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "ddb31e23-70e4-4f84-9c4d-781b95cf1ddf",
    "metadata": {},
    "outputs": [],
@@ -626,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "aabd4f12-0776-471a-85c9-9b407efcb5b5",
    "metadata": {},
    "outputs": [],
@@ -644,50 +699,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "336800ef-735e-43dd-a655-3f95f34a5ac9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [45]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m hits \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mfindall(pat, name)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# print('hit keywords:', hits)\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m cat_hit_probs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkwdict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mhit\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mhit\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mhits\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhits\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m catid \u001b[38;5;241m=\u001b[39m cat2idx[cat]\n\u001b[1;32m     20\u001b[0m pred_vector[catid] \u001b[38;5;241m=\u001b[39m cat_hit_probs\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "THR = 0.99\n",
     "# use valprobs\n",
     "changed = 0\n",
     "val_names = valset['name']\n",
+    "\n",
+    "\n",
     "for i, name in enumerate(val_names):\n",
+    "    # pred vector is the prediction proabability vector of i-th validation data \n",
     "    pred_vector = valprobs[i, :]\n",
-    "    beforeclass = getclass(pred_vector, THR=THR)\n",
-    "    # print('before string match:', beforeclass)\n",
+    "    \n",
+    "    # for the classes that have poor f1 score: \n",
     "    for cat, pairs in poor_cat2kw.items():\n",
     "        kws = [x[0] for x in pairs]\n",
     "        kwprobs = [x[1] for x in pairs]\n",
     "        kwdict = {kw:kwprob for kw, kwprob in zip(kws, kwprobs)}\n",
+    "        # use regex to find if the keyword appears in validation data's `name` \n",
     "        pat = re.compile(r'(?:{})'.format('|'.join(map(re.escape, kws))))\n",
+    "        # `hits` means the number of unique keywords found in 'name'\n",
     "        hits = re.findall(pat, name)\n",
-    "        # print('hit keywords:', hits)\n",
+    "        # for those \"hit keywords\", add up their cos_similarity\n",
+    "        # I personally call the summed cos_sim `cat_hit_probs` (category hit probability)\n",
+    "        # which is not completely accurate so bear with it \n",
     "        cat_hit_probs = sum(kwdict[hit] for hit in hits)\n",
+    "        # find the class' corresponding index\n",
     "        catid = cat2idx[cat]\n",
-    "        \n",
-    "        pred_vector[catid] = cat_hit_probs\n",
-    "        afterclass = getclass(pred_vector, THR= THR)\n",
-    "    # print('after string match:', afterclass)\n",
-    "    if beforeclass != afterclass:\n",
-    "        changed += 1\n",
-    "        # print(f'Validation instance {i}:')\n",
-    "        # print('* before string match:', beforeclass)\n",
-    "        # print('* after string match:', afterclass)  "
+    "        # !!!!!!!!!!!!!!!!!!\n",
+    "        # !!! revise the prediction vector by plugging for this class the `cat_hit_probs`!!!\n",
+    "        pred_vector[catid] = cat_hit_probs"
    ]
   },
   {
@@ -1058,7 +1103,7 @@
    "source": [
     "## 🏆 BEST probability threshold = 0.995(greedy search) \n",
     "\n",
-    "我有試過0.7, 0.8, 0.999, ...目前看起來最佳的threshold如上，macro f1可至0.74左右。\n",
+    "目前看起來最佳的threshold如上，macro f1可至0.76左右。\n",
     "\n",
     "簡單來說這個演算法流程就是**訓練多標籤BERT（macro f1=0.639），以其預測結果輔以fasttext所訓練出的top 10關鍵字matching（macro f1 = 0.738）**。\n",
     "都是以資料集本身餵入處理與切割train test，未經過class數量的篩選與人為操作，如test set分布和valid set相似，可預估最後表現應該也是落在**0.63 ~0.74**之間。\n",
@@ -1510,7 +1555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
