--- a/codes/model_output_check.ipynb
+++ b/codes/model_output_check.ipynb
@@ -39,9 +39,13 @@
     }
    ],
    "source": [
+    "#整體正確率\n",
+    "output.fillna(\"無\",inplace=True)\n",
     "correct_count=0\n",
     "for x in range(len(output)):\n",
-    "    if output.loc[x,'predictions']==output.loc[x,'labels']:\n",
+    "    pred_temp=output.loc[x,\"predictions\"].split(\";\")\n",
+    "    label_temp=output.loc[x,\"labels\"].split(\";\")\n",
+    "    if set(pred_temp)==set(label_temp):\n",
     "        correct_count+=1\n",
     "round(correct_count/len(output),2)      "
    ]
@@ -55,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
      "execution_count": 4,
@@ -64,10 +68,13 @@
     }
    ],
    "source": [
+    "#多標籤正確數量\n",
     "loc_multi=[]\n",
     "for x in range(len(output)):\n",
     "    if \";\" in output.loc[x,'labels']:\n",
-    "        if output.loc[x,'predictions']==output.loc[x,'labels']:\n",
+    "        pred_temp=output.loc[x,\"predictions\"].split(\";\")\n",
+    "        label_temp=output.loc[x,\"labels\"].split(\";\")\n",
+    "        if set(pred_temp)==set(label_temp):\n",
     "            loc_multi.append(x)\n",
     "len(loc_multi)"
    ]
@@ -81,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "2919"
+       "2917"
       ]
      },
      "execution_count": 5,
@@ -90,9 +97,12 @@
     }
    ],
    "source": [
+    "#整體錯誤筆數\n",
     "loc_error=[]\n",
     "for x in range(len(output)):\n",
-    "    if output.loc[x,'predictions']!=output.loc[x,'labels']:\n",
+    "    pred_temp=output.loc[x,\"predictions\"].split(\";\")\n",
+    "    label_temp=output.loc[x,\"labels\"].split(\";\")\n",
+    "    if set(pred_temp)!=set(label_temp):\n",
     "        loc_error.append(x)\n",
     "len(loc_error)"
    ]
@@ -100,24 +110,120 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7b3a74d3",
+   "id": "76247385",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_target=pd.DataFrame(columns=['Unnamed: 0', 'name', 'predictions', 'labels'])"
+    "#提取錯誤資料\n",
+    "loss_target=pd.DataFrame(columns=['Unnamed: 0', 'name', 'predictions', 'labels'])\n",
+    "for x in loc_error:\n",
+    "    mask=(output['name']==output.loc[x][\"name\"])\n",
+    "    loss_target= pd.concat([loss_target, output[mask]], ignore_index=True)\n",
+    "loss_target.drop(columns=['Unnamed: 0'],inplace=True)\n",
+    "loss_target.to_excel(\"loss_target.xlsx\",index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "76247385",
+   "id": "f87c6788",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for x in loc_error:\n",
-    "    mask=(output['name']==output.loc[x][\"name\"])\n",
-    "    loss_target= pd.concat([loss_target, output[mask]], ignore_index=True)\n",
-    "loss_target.to_excel(\"loss_target.xlsx\")"
+    "#預測為多標籤實際為單標籤\n",
+    "count=0\n",
+    "for x in range(len(loss_target)):\n",
+    "    if \";\" in loss_target.loc[x,\"predictions\"] and \";\" not in loss_target.loc[x,\"labels\"]:\n",
+    "        count+=1\n",
+    "round(count/len(loss_target),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f636779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.38"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#單標籤分錯\n",
+    "count=0\n",
+    "for x in range(len(loss_target)):\n",
+    "    if \";\" not in loss_target.loc[x,\"predictions\"] and \";\" not in loss_target.loc[x,\"labels\"]:\n",
+    "        count+=1\n",
+    "round(count/len(loss_target),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "37aa050d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#預測為單標籤實際為多標籤\n",
+    "count=0\n",
+    "for x in range(len(loss_target)):\n",
+    "    if \";\" not in loss_target.loc[x,\"predictions\"] and \";\" in loss_target.loc[x,\"labels\"]:\n",
+    "        count+=1\n",
+    "round(count/len(loss_target),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9943c274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05\n",
+      "154\n"
+     ]
+    }
+   ],
+   "source": [
+    "#分不出標籤的數量\n",
+    "count=0\n",
+    "for x in range(len(loss_target)):\n",
+    "    if loss_target.loc[x,\"predictions\"]==\"無\":\n",
+    "        count+=1\n",
+    "print(round(count/len(loss_target),2))\n",
+    "print(count)"
    ]
   }
  ],
